--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.0",
     "compose": "^0.1.2",
     "convex": "^1.8.0",
+    "convex-helpers": "^0.1.52",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.321.0",
     "next": "14.1.0",
